--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -217,6 +217,7 @@
 \newcommand{\oiff}[2]{#1 \Leftrightarrow #2} % iff
 \newcommand{\ototal}[2]{#1{:}\support{#2}} % support membership
 \newcommand{\oper}[3]{#2\,{\approx_{#1}}\,#3} % per
+\newcommand{\orz}[2]{#1\,{\Vdash}\,#2} % realizer
 \newcommand{\oequal}[2]{#1{=}#2} % observational equality
 \newcommand{\oforall}[3]{\forall #1{:}#2.\,#3}
 \newcommand{\oforallt}[3]{\forall #1{:}\support{#2}.\,#3}
